--- a/EX-02-SELETORES-CSS/style.css
+++ b/EX-02-SELETORES-CSS/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 /* ID NO HTML = # NO CSS */
 /* CLASS NO HTML = . NO CSS */
+/* PODEMOS TAMBÉM ADICIONAR UM ID E UMA CLASSE NO MESMO ELEMENTO, PORÉM O ID TEM MAIS PESO QUE O CLASSE ENTÃO A FORMATAÇÃO PRIORIZADA SERÁ DO ID. */
 /* LEMBRANDO QUE NÃO PODEMOS REPETIR O MESMO ID NO MESMO DOCUMENTO, JÁ A CLASSE PODEMOS REPETIR E INCLUSIVE UTILIZAR MAIS DE UMA CLASSE NO ELEMENTO. */
 body {
   background-color: rgb(165, 209, 248);
