--- a/PSEUDO-CLASSES/style.css
+++ b/PSEUDO-CLASSES/style.css
@@ -1,1 +1,22 @@
 @charset "UTF-8";
+div {
+  display: inline-block;
+  margin: 5px;
+  background-color: gray;
+  text-align: center;
+  border: 1px solid black;
+  width: 200px;
+  height: 200px;
+}
+div:hover {
+  background-color: lightgray;
+  border: 1px solid blue;
+}
+div > p {
+  /* o simbolo > serve para identificar que estou pegando um elemento que está dentro do outro, no caso estou selecionando o elemento p que está dentro da div sendo assim div > p */
+  display: none;
+}
+div:hover p {
+  display: block;
+  color: red;
+}
