--- a/APRENDENDO-SOBRE-CAIXAS/style.css
+++ b/APRENDENDO-SOBRE-CAIXAS/style.css
@@ -3,10 +3,18 @@
   width: 400px;
   height: 400px;
   background-color: blueviolet;
+  display: flex;
+  justify-content: center; /* CENTRALIZA HORIZONTALMENTE */
+  
+  align-items: center; /* CENTRALIZA VERTICALMENTE */
 }
 #box2 {
   margin: 10px 0px 0px 0px;
   width: 200px;
   height: 200px;
   background-color: brown;
+}
+span {
+  border: 1px solid black;
+  padding: 10px;
 }
